--- a/Details/index.html
+++ b/Details/index.html
@@ -6,21 +6,12 @@
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-
-
-
-
     <meta name="robots" content="noindex, nofollow" />
-   
-    <link rel="stylesheet" href="CSS/bootstrap-3.2.0.min.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/bootstrap-3.2.0.min.css" type="text/css">
+    <script type="text/javascript" src="../JS/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../JS/bootstrap-3.2.0.min.js"></script>
 
 
-
-    <script type="text/javascript" src="JS/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="JS/bootstrap-3.2.0.min.js"></script>
-    <script type="text/javascript" src="JS/prettify.js"></script>
-
-    <link rel="stylesheet" href="CSS/bootstrap-multiselect.css" type="text/css">
     <script type="text/javascript" src="JS/bootstrap-multiselect.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
@@ -49,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Huffington On Twitter</a>
+                <a class="navbar-brand" href="../">Huffington On Twitter</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,8 +64,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-
-
+    <h1>Details</h1>
 
 </body>
 
