--- a/Details/index.html
+++ b/Details/index.html
@@ -55,7 +55,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Github</a>
+                    <li><a href="https://github.com/leaot/Huffpost-Articles-in-Twitter-Trends">Github</a>
                     </li>
                 </ul>
             </div>
