update the links in nabber

--- a/Details/index.html
+++ b/Details/index.html
@@ -49,7 +49,7 @@
 
                     <li><a href="/Details">Details</a>
                     </li>
-                    <li><a href="#">About Me</a>
+                    <li><a href="http://leaot.com/">About Me</a>
                     </li>
 
                 </ul>
