--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 
-                    <li><a href="/Details">Details</a>
+                    <li><a href="https://github.com/leaot/Huffpost-Articles-in-Twitter-Trends/blob/master/README.md">Details</a>
                     </li>
-                    <li><a href="#">About Me</a>
+                    <li><a href="http://leaot.com/">About Me</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Github</a>
+                    <li><a href="https://github.com/leaot/Huffpost-Articles-in-Twitter-Trends">Github</a>
                     </li>
                 </ul>
             </div>
